Consistent use of JDK 7 and 8 rather than 1.7 and 1.8

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@ the Spring IO platform later in 2014.
  - Works with your existing dependency management tools such as Maven and Gradle
  - The Spring IO Platform is certified to work on JDK 7 and 8<sup>*</sup>
 
-<sup>*</sup>While the Spring IO Platform supports JDK 1.7 and 1.8, many individual Spring
-projects support older JDK versions. Please refer to the [individual projects' documentation]
+<sup>*</sup>While the Spring IO Platform supports JDK 7 and 8, many individual Spring
+projects also support older JDK versions. Please refer to the [individual projects' documentation]
 (http://spring.io/docs) for the specific minimum requirements.
 
 ## Quick Start
