Correct Issues description to reflect use of GitHub

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ badges:
       url:  https://github.com/spring-io/platform
       icon: github
 
-    - name: Issues (JIRA)
+    - name: Issues (GitHub)
       url:  https://github.com/spring-io/platform/issues
       icon: tracking
 
