Remove reference to Spring XD being added to the Platform in 2014

--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@ The Spring IO platform includes Foundation Layer modules and Execution Layer dom
 (DSRs). The Foundation layer represents the core Spring modules and associated third-party
 dependencies that have been harmonized to ensure a smooth development experience. The DSRs provided by
 the Spring IO Execution Layer dramatically simplify building production-ready, JVM-based workloads.
-The first release of Spring IO includes two DSRs: Spring Boot and Grails. Spring XD will be added to
-the Spring IO platform later in 2014.
+The first release of Spring IO includes two DSRs: Spring Boot and Grails
 
 ### Features
 
