--- a/index.html
+++ b/index.html
@@ -48,11 +48,13 @@ lean, and modular.
 
 {% capture main_content %}
 
-The Spring IO platform includes Foundation Layer modules and Execution Layer domain-specific runtimes
-(DSRs). The Foundation layer represents the core Spring modules and associated third-party
-dependencies that have been harmonized to ensure a smooth development experience. The DSRs provided by
-the Spring IO Execution Layer dramatically simplify building production-ready, JVM-based workloads.
-The first release of Spring IO includes two DSRs: Spring Boot and Grails
+### End of Life
+
+The Platform will reach the end of its supported life on 9 April 2019. Maintenence
+releases of both the Brussels and Cairo lines will continue to be published up until that
+time. Users of the Platform are encourage to start using Spring Boot's dependency
+management directory, either by using spring-boot-starter-parent as their Maven project's
+parent, or by importing the spring-boot-dependencies bom.
 
 ### Features
 
