--- a/index.html
+++ b/index.html
@@ -1,103 +1,11 @@
----
-# The name of your project
-title: Spring IO Platform
-
-badges:
-
-  # Specify your project's twitter handle, if any. Delete if none.
-  # twitter: SpringData
-
-  # Customize your project's badges. Delete any entries that do not apply.
-  custom:
-    - name: Source (GitHub)
-      url:  https://github.com/spring-io/platform
-      icon: github
-
-    - name: Issues (GitHub)
-      url:  https://github.com/spring-io/platform/issues
-      icon: tracking
-
-    - name: CI (Bamboo)
-      url:  https://build.spring.io/browse/PLATFORM
-      icon: ci
-
-#    - name: Forum
-#      url:  http://forum.spring.io/forum/spring-projects/data
-#      icon: forum
-
-#    - name: StackOverflow
-#      url:  http://stackoverflow.com/questions/tagged/spring-data-jpa
-#      icon: stackoverflow
-
-#    - name: Metrics (SonarQube)
-#      url:  https://sonar.springsource.org/dashboard/index/org.springframework.data:spring-data-jpa
-#      icon: metrics
-
----
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en-US">
-
-{% capture billboard_description %}
-
-Spring IO is a cohesive, versioned platform for building modern applications. It is a modular,
-enterprise-grade distribution that delivers a curated set of dependencies while keeping
-developers in full control of deploying only the parts they need. Spring IO is 100% open source,
-lean, and modular.
-
-{% endcapture %}
-
-{% capture main_content %}
-
-### End of Life
-
-The Platform will reach the end of its supported life on 9 April 2019. Maintenence
-releases of both the Brussels and Cairo lines will continue to be published up until that
-time. Users of the Platform are encourage to start using Spring Boot's dependency
-management directory, either by using spring-boot-starter-parent as their Maven project's
-parent, or by importing the spring-boot-dependencies bom.
-
-### Features
-
- - One platform, many workloads - build web, integration, batch, reactive or big data applications
- - Radically simplified development experience with Spring Boot
- - Production-ready features provided out of the box
- - Curated and harmonized dependencies that just work together
- - Modular platform that allows developers to deploy only the parts they need
- - Support for embedded runtimes, classic application server, and PaaS deployments
- - Depends only on Java SE, and supports Groovy, Grails and some Java EE
- - Works with your existing dependency management tools such as Maven and Gradle
- - The Spring IO Platform is certified to work on JDK 7 and 8<sup>*</sup>
-
-<sup>*</sup>While the Spring IO Platform supports JDK 7 and 8, many individual Spring
-projects also support older JDK versions. Please refer to the [individual projects' documentation]
-(http://spring.io/docs) for the specific minimum requirements.
-
-## Quick Start
-
-{% include download_widget.md %}
-
-### Using the Platform
-
-The Spring IO platform provides versions of the various Spring projects and their dependencies. With the
-configuration shown above added to your build script, you're ready to declare your dependencies without
-having to worry about version numbers:
-
-#### Maven
-```xml
-<dependency>
-    <groupId>org.springframework</groupId>
-    <artifactId>spring-core</artifactId>
-</dependency>
-```
-
-#### Gradle
-```groovy
-dependencies {
-    compile 'org.springframework:spring-core'
-}
-```
-
-{% endcapture %}
-
-{% include project_page.html %}
+  <meta charset="utf-8">
+  <title>Redirecting&hellip;</title>
+  <link rel="canonical" href="http://spring.io/projects/platform">
+  <meta http-equiv="refresh" content="0; url=http://spring.io/projects/platform">
+  <meta name="robots" content="noindex">
+  <h1>Redirecting&hellip;</h1>
+  <a href="http://spring.io/projects/platform">Click here if you are not redirected.</a>
+  <script>location="http://spring.io/projects/platform"</script>
 </html>
